add http-server to run client, add demo to extract plain text from transcription

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   voicestreamai:
     image: voicestreamai:latest
+    container_name: voicestreamai
     build:
       context: .
       dockerfile: Dockerfile
